# ncnn-use

./: CMakeLists.txt  README.md
demo/: MacBook_CMakeLists.txt  pnnx_yolov5s_6.0.cpp  resnet18.cpp  resnet18_pnnx.cpp  yolov5s_6.0.cpp
demo/MacBook_SRC/: demo.cpp
model_create/: resnet18.py  resnet18_pnnx.py  resnet18_torch_script.py
models/: resnet18.param  yolov5s-6.0.param
ncnn/include/ncnn/: platform.h
ncnn/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
ncnn/lib/cmake/glslang/: glslang-config-version.cmake  glslang-targets-release.cmake  glslang-targets.cmake
ncnn/lib/cmake/ncnn/: ncnn.cmake
ncnn/lib/pkgconfig/: ncnn.pc
ncnn_infer_demo/: README.md
note/: 1.ncnn下载与编译.md  2.pnnx与模型.md  2.pnnx模型转换.md  3.ncnn工具模型转换.md  4.pnnx_resnet18推理.md  4.pnnx_resnet18模型部署.md  5.resnet18推理.md  6.yolov5s_6.0推理.md  6.yolov5s推理.md  6.yolo推理.md  7.pnnx_yolov5s_6.0推理.md
